Fix spacing and size in post title image

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -1868,13 +1868,16 @@ body .guides .guides-section-white {
 .post-detail {
   padding-bottom: 5em;
   h1 {
-    margin-top: -10px;
+    margin: 20px auto;
     font-size: 35px;
     line-height: normal;
     letter-spacing: 0.98px;
     text-align: center;
-    margin-bottom: auto;
     color: @guides-font;
+  }
+  .post-title-image {
+    padding: 0px;
+    max-height: 110px;
   }
   .post-title {
     color: #000000;
